[project]
name = "nonebot-plugin-sky"
version = "3.0.0"
description = "基于Nonebot2的sky光遇攻略插件"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENCE" }
dependencies = [
    "aiofiles>=24.1.0",
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "lxml>=6.0.0",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot2>=2.4.2",
    "pip>=25.2",
    "setuptools>=80.9.0",
]
